<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="videosync.dcsecurity.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/dcbackground">


    <TextView
        android:text="@string/authors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authors"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:gravity="center"
        android:width="50dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/staffnr"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:hint="@string/pers_nr_placeholder"/>

    <Button
        android:text="@string/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/btn_login"
        android:layout_below="@+id/staffnr"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton"
        android:padding="10dp"
        android:backgroundTint="@color/btnRed"
        android:textColor="#FFF"/>
</RelativeLayout>
