<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="videosync.dcsecurity.MainMenu"
    tools:showIn="@layout/activity_main_menu"
    android:background="@drawable/dcbackground">


    <TextView
        android:text="@string/authors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authors"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:gravity="center"
        android:width="50dp"/>

    <Button
        android:text="@string/btn_scan_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_scan"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#FFF"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/btn_login"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#FFF"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/btn_scan"
        android:layout_alignStart="@+id/btn_scan" />
</RelativeLayout>
